# Assignments_NLP_Training_RPG

./: .gitignore  README.md  pyproject.toml
assignments/phase_0/week_1/: Bai1.py  Bai2.py  Bai3.py  Bai4.py  craw.py
assignments/phase_1/week_1/: 1.Basic_Tokenizer.py  2.vietnamese_text_processor.py  3.Build_One_Hot.py  4. SentenceRepresentationUsingOne-Hot.py  5.Build_Bag-of-Words (BoW).py  6.Build_TF.py  7.Build_IDF_(Inverse_Document_Frequency).py  8.Build_TF-IDF_From_Scratch.py  vietnamese_stopwords.txt
assignments/phase_1/week_2/: 9.Text_Classification_Using BoW_TF_IDF.ipynb
assignments/phase_1/week_2/10. Real-World Search Engine Ranking/: README  search_service.py
projects/phase_0/Mini_pj/: .dockerignore  .env.docker.example  Dockerfile  QUICK_START.py  README.md  chiaki_products.json  docker-compose.yml  requirements.txt  test_api.py  test_preprocessing.py  test_search.py
projects/phase_0/Mini_pj/app/: main.py
projects/phase_0/Mini_pj/app/api/v1/: product_routes.py  router.py
projects/phase_0/Mini_pj/app/core/: config.py
projects/phase_0/Mini_pj/app/db/: base.py  session.py
projects/phase_0/Mini_pj/app/models/: __init__.py  product.py
projects/phase_0/Mini_pj/app/repositories/: __init__.py  product_repository.py
projects/phase_0/Mini_pj/app/schemas/: __init__.py  product.py
projects/phase_0/Mini_pj/app/services/: __init__.py  search_service.py  text_normalizer.py
projects/phase_0/Mini_pj/scripts/: create_tables.py  import_products.py
